; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_delay2.c_func.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_delay2.c_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i64 }

@__const.func.interval = private unnamed_addr constant %struct.timespec { i32 5, i64 500000000 }, align 8
@mx = common dso_local global i32 0, align 4
@pthread_mutex_unlock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @func(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.timespec, align 8
  store i8* %0, i8** %2, align 8
  %4 = bitcast %struct.timespec* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %4, i8* align 8 bitcast (%struct.timespec* @__const.func.interval to i8*), i64 16, i1 false)
  %5 = call i64 @pthread_mutex_lock(i32* @mx)
  %6 = icmp eq i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* @pthread_mutex_unlock, align 4
  %10 = call i32 @pthread_cleanup_push(i32 %9, i32* @mx)
  %11 = call i64 @pthread_delay_np(%struct.timespec* %3)
  %12 = icmp eq i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = call i32 @pthread_cleanup_pop(i32 1)
  ret i8* inttoptr (i64 1 to i8*)
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @assert(i32) #2

declare dso_local i64 @pthread_mutex_lock(i32*) #2

declare dso_local i32 @pthread_cleanup_push(i32, i32*) #2

declare dso_local i64 @pthread_delay_np(%struct.timespec*) #2

declare dso_local i32 @pthread_cleanup_pop(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
